grammarPythonParser.js
// Generated from grammarPythonParser.g4 by ANTLR 4.10.1
// jshint ignore: start
import antlr4 from 'antlr4';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class grammarPythonParser extends antlr4.Parser {

    static grammarFileName = "grammarPythonParser.g4";
    static literalNames = [ null, null, null, null, null, null, "'def'", 
                            "'return'", "'raise'", "'from'", "'import'", 
                            "'as'", "'global'", "'nonlocal'", "'assert'", 
                            "'if'", "'elif'", "'else'", "'while'", "'for'", 
                            "'in'", "'try'", "'finally'", "'with'", "'except'", 
                            "'lambda'", "'or'", "'and'", "'not'", "'is'", 
                            "'None'", "'True'", "'False'", "'class'", "'yield'", 
                            "'del'", "'pass'", "'continue'", "'break'", 
                            "'async'", "'await'", null, null, null, null, 
                            null, null, null, null, null, null, "'.'", "'...'", 
                            "'*'", "'('", "')'", "','", "':'", "';'", "'**'", 
                            "'='", "'['", "']'", "'|'", "'^'", "'&'", "'<<'", 
                            "'>>'", "'+'", "'-'", "'/'", "'%'", "'//'", 
                            "'~'", "'{'", "'}'", "'<'", "'>'", "'=='", "'>='", 
                            "'<='", "'<>'", "'!='", "'@'", "'->'", "'+='", 
                            "'-='", "'*='", "'@='", "'/='", "'%='", "'&='", 
                            "'|='", "'^='", "'<<='", "'>>='", "'**='", "'//='" ];
    static symbolicNames = [ null, "INDENT", "DEDENT", "STRING", "NUMBER", 
                             "INTEGER", "DEF", "RETURN", "RAISE", "FROM", 
                             "IMPORT", "AS", "GLOBAL", "NONLOCAL", "ASSERT", 
                             "IF", "ELIF", "ELSE", "WHILE", "FOR", "IN", 
                             "TRY", "FINALLY", "WITH", "EXCEPT", "LAMBDA", 
                             "OR", "AND", "NOT", "IS", "NONE", "TRUE", "FALSE", 
                             "CLASS", "YIELD", "DEL", "PASS", "CONTINUE", 
                             "BREAK", "ASYNC", "AWAIT", "NEWLINE", "NAME", 
                             "STRING_LITERAL", "BYTES_LITERAL", "DECIMAL_INTEGER", 
                             "OCT_INTEGER", "HEX_INTEGER", "BIN_INTEGER", 
                             "FLOAT_NUMBER", "IMAG_NUMBER", "DOT", "ELLIPSIS", 
                             "STAR", "OPEN_PAREN", "CLOSE_PAREN", "COMMA", 
                             "COLON", "SEMI_COLON", "POWER", "ASSIGN", "OPEN_BRACK", 
                             "CLOSE_BRACK", "OR_OP", "XOR", "AND_OP", "LEFT_SHIFT", 
                             "RIGHT_SHIFT", "ADD", "MINUS", "DIV", "MOD", 
                             "IDIV", "NOT_OP", "OPEN_BRACE", "CLOSE_BRACE", 
                             "LESS_THAN", "GREATER_THAN", "EQUALS", "GT_EQ", 
                             "LT_EQ", "NOT_EQ_1", "NOT_EQ_2", "AT", "ARROW", 
                             "ADD_ASSIGN", "SUB_ASSIGN", "MULT_ASSIGN", 
                             "AT_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "AND_ASSIGN", 
                             "OR_ASSIGN", "XOR_ASSIGN", "LEFT_SHIFT_ASSIGN", 
                             "RIGHT_SHIFT_ASSIGN", "POWER_ASSIGN", "IDIV_ASSIGN", 
                             "SKIP_", "UNKNOWN_CHAR" ];
    static ruleNames = [ "single_input", "file_input", "eval_input", "decorator", 
                         "decorators", "decorated", "async_funcdef", "funcdef", 
                         "parameters", "typedargslist", "tfpdef", "varargslist", 
                         "vfpdef", "stmt", "simple_stmt", "small_stmt", 
                         "expr_stmt", "annassign", "testlist_star_expr", 
                         "augassign", "del_stmt", "pass_stmt", "flow_stmt", 
                         "break_stmt", "continue_stmt", "return_stmt", "yield_stmt", 
                         "raise_stmt", "import_stmt", "import_name", "import_from", 
                         "import_as_name", "dotted_as_name", "import_as_names", 
                         "dotted_as_names", "dotted_name", "global_stmt", 
                         "nonlocal_stmt", "assert_stmt", "compound_stmt", 
                         "async_stmt", "if_stmt", "while_stmt", "for_stmt", 
                         "try_stmt", "with_stmt", "with_item", "except_clause", 
                         "suite", "test", "test_nocond", "lambdef", "lambdef_nocond", 
                         "or_test", "and_test", "not_test", "comparison", 
                         "comp_op", "star_expr", "expr", "xor_expr", "and_expr", 
                         "shift_expr", "arith_expr", "term", "factor", "power", 
                         "atom_expr", "atom", "testlist_comp", "trailer", 
                         "subscriptlist", "subscript_", "sliceop", "exprlist", 
                         "testlist", "dictorsetmaker", "classdef", "arglist", 
                         "argument", "comp_iter", "comp_for", "comp_if", 
                         "encoding_decl", "yield_expr", "yield_arg" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = grammarPythonParser.ruleNames;
        this.literalNames = grammarPythonParser.literalNames;
        this.symbolicNames = grammarPythonParser.symbolicNames;
    }

    get atn() {
        return atn;
    }



	single_input() {
	    let localctx = new Single_inputContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, grammarPythonParser.RULE_single_input);
	    try {
	        this.state = 177;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case grammarPythonParser.NEWLINE:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 172;
	            this.match(grammarPythonParser.NEWLINE);
	            break;
	        case grammarPythonParser.STRING:
	        case grammarPythonParser.NUMBER:
	        case grammarPythonParser.RETURN:
	        case grammarPythonParser.RAISE:
	        case grammarPythonParser.FROM:
	        case grammarPythonParser.IMPORT:
	        case grammarPythonParser.GLOBAL:
	        case grammarPythonParser.NONLOCAL:
	        case grammarPythonParser.ASSERT:
	        case grammarPythonParser.LAMBDA:
	        case grammarPythonParser.NOT:
	        case grammarPythonParser.NONE:
	        case grammarPythonParser.TRUE:
	        case grammarPythonParser.FALSE:
	        case grammarPythonParser.YIELD:
	        case grammarPythonParser.DEL:
	        case grammarPythonParser.PASS:
	        case grammarPythonParser.CONTINUE:
	        case grammarPythonParser.BREAK:
	        case grammarPythonParser.AWAIT:
	        case grammarPythonParser.NAME:
	        case grammarPythonParser.ELLIPSIS:
	        case grammarPythonParser.STAR:
	        case grammarPythonParser.OPEN_PAREN:
	        case grammarPythonParser.OPEN_BRACK:
	        case grammarPythonParser.ADD:
	        case grammarPythonParser.MINUS:
	        case grammarPythonParser.NOT_OP:
	        case grammarPythonParser.OPEN_BRACE:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 173;
	            this.simple_stmt();
	            break;
	        case grammarPythonParser.DEF:
	        case grammarPythonParser.IF:
	        case grammarPythonParser.WHILE:
	        case grammarPythonParser.FOR:
	        case grammarPythonParser.TRY:
	        case grammarPythonParser.WITH:
	        case grammarPythonParser.CLASS:
	        case grammarPythonParser.ASYNC:
	        case grammarPythonParser.AT:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 174;
	            this.compound_stmt();
	            this.state = 175;
	            this.match(grammarPythonParser.NEWLINE);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	file_input() {
	    let localctx = new File_inputContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, grammarPythonParser.RULE_file_input);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 183;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << grammarPythonParser.STRING) | (1 << grammarPythonParser.NUMBER) | (1 << grammarPythonParser.DEF) | (1 << grammarPythonParser.RETURN) | (1 << grammarPythonParser.RAISE) | (1 << grammarPythonParser.FROM) | (1 << grammarPythonParser.IMPORT) | (1 << grammarPythonParser.GLOBAL) | (1 << grammarPythonParser.NONLOCAL) | (1 << grammarPythonParser.ASSERT) | (1 << grammarPythonParser.IF) | (1 << grammarPythonParser.WHILE) | (1 << grammarPythonParser.FOR) | (1 << grammarPythonParser.TRY) | (1 << grammarPythonParser.WITH) | (1 << grammarPythonParser.LAMBDA) | (1 << grammarPythonParser.NOT) | (1 << grammarPythonParser.NONE) | (1 << grammarPythonParser.TRUE))) !== 0) || ((((_la - 32)) & ~0x1f) == 0 && ((1 << (_la - 32)) & ((1 << (grammarPythonParser.FALSE - 32)) | (1 << (grammarPythonParser.CLASS - 32)) | (1 << (grammarPythonParser.YIELD - 32)) | (1 << (grammarPythonParser.DEL - 32)) | (1 << (grammarPythonParser.PASS - 32)) | (1 << (grammarPythonParser.CONTINUE - 32)) | (1 << (grammarPythonParser.BREAK - 32)) | (1 << (grammarPythonParser.ASYNC - 32)) | (1 << (grammarPythonParser.AWAIT - 32)) | (1 << (grammarPythonParser.NEWLINE - 32)) | (1 << (grammarPythonParser.NAME - 32)) | (1 << (grammarPythonParser.ELLIPSIS - 32)) | (1 << (grammarPythonParser.STAR - 32)) | (1 << (grammarPythonParser.OPEN_PAREN - 32)) | (1 << (grammarPythonParser.OPEN_BRACK - 32)))) !== 0) || ((((_la - 68)) & ~0x1f) == 0 && ((1 << (_la - 68)) & ((1 << (grammarPythonParser.ADD - 68)) | (1 << (grammarPythonParser.MINUS - 68)) | (1 << (grammarPythonParser.NOT_OP - 68)) | (1 << (grammarPythonParser.OPEN_BRACE - 68)) | (1 << (grammarPythonParser.AT - 68)))) !== 0)) {
	            this.state = 181;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case grammarPythonParser.NEWLINE:
	                this.state = 179;
	                this.match(grammarPythonParser.NEWLINE);
	                break;
	            case grammarPythonParser.STRING:
	            case grammarPythonParser.NUMBER:
	            case grammarPythonParser.DEF:
	            case grammarPythonParser.RETURN:
	            case grammarPythonParser.RAISE:
	            case grammarPythonParser.FROM:
	            case grammarPythonParser.IMPORT:
	            case grammarPythonParser.GLOBAL:
	            case grammarPythonParser.NONLOCAL:
	            case grammarPythonParser.ASSERT:
	            case grammarPythonParser.IF:
	            case grammarPythonParser.WHILE:
	            case grammarPythonParser.FOR:
	            case grammarPythonParser.TRY:
	            case grammarPythonParser.WITH:
	            case grammarPythonParser.LAMBDA:
	            case grammarPythonParser.NOT:
	            case grammarPythonParser.NONE:
	            case grammarPythonParser.TRUE:
	            case grammarPythonParser.FALSE:
	            case grammarPythonParser.CLASS:
	            case grammarPythonParser.YIELD:
	            case grammarPythonParser.DEL:
	            case grammarPythonParser.PASS:
	            case grammarPythonParser.CONTINUE:
	            case grammarPythonParser.BREAK:
	            case grammarPythonParser.ASYNC:
	            case grammarPythonParser.AWAIT:
	            case grammarPythonParser.NAME:
	            case grammarPythonParser.ELLIPSIS:
	            case grammarPythonParser.STAR:
	            case grammarPythonParser.OPEN_PAREN:
	            case grammarPythonParser.OPEN_BRACK:
	            case grammarPythonParser.ADD:
	            case grammarPythonParser.MINUS:
	            case grammarPythonParser.NOT_OP:
	            case grammarPythonParser.OPEN_BRACE:
	            case grammarPythonParser.AT:
	                this.state = 180;
	                this.stmt();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 185;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 186;
	        this.match(grammarPythonParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	eval_input() {
	    let localctx = new Eval_inputContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, grammarPythonParser.RULE_eval_input);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 188;
	        this.testlist();
	        this.state = 192;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===grammarPythonParser.NEWLINE) {
	            this.state = 189;
	            this.match(grammarPythonParser.NEWLINE);
	            this.state = 194;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 195;
	        this.match(grammarPythonParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	decorator() {
	    let localctx = new DecoratorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, grammarPythonParser.RULE_decorator);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 197;
	        this.match(grammarPythonParser.AT);
	        this.state = 198;
	        this.dotted_name();
	        this.state = 204;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===grammarPythonParser.OPEN_PAREN) {
	            this.state = 199;
	            this.match(grammarPythonParser.OPEN_PAREN);
	            this.state = 201;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << grammarPythonParser.STRING) | (1 << grammarPythonParser.NUMBER) | (1 << grammarPythonParser.LAMBDA) | (1 << grammarPythonParser.NOT) | (1 << grammarPythonParser.NONE) | (1 << grammarPythonParser.TRUE))) !== 0) || ((((_la - 32)) & ~0x1f) == 0 && ((1 << (_la - 32)) & ((1 << (grammarPythonParser.FALSE - 32)) | (1 << (grammarPythonParser.AWAIT - 32)) | (1 << (grammarPythonParser.NAME - 32)) | (1 << (grammarPythonParser.ELLIPSIS - 32)) | (1 << (grammarPythonParser.STAR - 32)) | (1 << (grammarPythonParser.OPEN_PAREN - 32)) | (1 << (grammarPythonParser.POWER - 32)) | (1 << (grammarPythonParser.OPEN_BRACK - 32)))) !== 0) || ((((_la - 68)) & ~0x1f) == 0 && ((1 << (_la - 68)) & ((1 << (grammarPythonParser.ADD - 68)) | (1 << (grammarPythonParser.MINUS - 68)) | (1 << (grammarPythonParser.NOT_OP - 68)) | (1 << (grammarPythonParser.OPEN_BRACE - 68)))) !== 0)) {
	                this.state = 200;
	                this.arglist();
	            }

	            this.state = 203;
	            this.match(grammarPythonParser.CLOSE_PAREN);
	        }

	        this.state = 206;
	        this.match(grammarPythonParser.NEWLINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	decorators() {
	    let localctx = new DecoratorsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, grammarPythonParser.RULE_decorators);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 209; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 208;
	            this.decorator();
	            this.state = 211; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===grammarPythonParser.AT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	decorated() {
	    let localctx = new DecoratedContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, grammarPythonParser.RULE_decorated);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 213;
	        this.decorators();
	        this.state = 217;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case grammarPythonParser.CLASS:
	            this.state = 214;
	            this.classdef();
	            break;
	        case grammarPythonParser.DEF:
	            this.state = 215;
	            this.funcdef();
	            break;
	        case grammarPythonParser.ASYNC:
	            this.state = 216;
	            this.async_funcdef();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	async_funcdef() {
	    let localctx = new Async_funcdefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, grammarPythonParser.RULE_async_funcdef);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 219;
	        this.match(grammarPythonParser.ASYNC);
	        this.state = 220;
	        this.funcdef();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funcdef() {
	    let localctx = new FuncdefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, grammarPythonParser.RULE_funcdef);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 222;
	        this.match(grammarPythonParser.DEF);
	        this.state = 223;
	        this.match(grammarPythonParser.NAME);
	        this.state = 224;
	        this.parameters();
	        this.state = 227;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===grammarPythonParser.ARROW) {
	            this.state = 225;
	            this.match(grammarPythonParser.ARROW);
	            this.state = 226;
	            this.test();
	        }

	        this.state = 229;
	        this.match(grammarPythonParser.COLON);
	        this.state = 230;
	        this.suite();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	parameters() {
	    let localctx = new ParametersContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, grammarPythonParser.RULE_parameters);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 232;
	        this.match(grammarPythonParser.OPEN_PAREN);
	        this.state = 234;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(((((_la - 42)) & ~0x1f) == 0 && ((1 << (_la - 42)) & ((1 << (grammarPythonParser.NAME - 42)) | (1 << (grammarPythonParser.STAR - 42)) | (1 << (grammarPythonParser.POWER - 42)))) !== 0)) {
	            this.state = 233;
	            this.typedargslist();
	        }

	        this.state = 236;
	        this.match(grammarPythonParser.CLOSE_PAREN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	typedargslist() {
	    let localctx = new TypedargslistContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, grammarPythonParser.RULE_typedargslist);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 319;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case grammarPythonParser.NAME:
	            this.state = 238;
	            this.tfpdef();
	            this.state = 241;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===grammarPythonParser.ASSIGN) {
	                this.state = 239;
	                this.match(grammarPythonParser.ASSIGN);
	                this.state = 240;
	                this.test();
	            }

	            this.state = 251;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,12,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 243;
	                    this.match(grammarPythonParser.COMMA);
	                    this.state = 244;
	                    this.tfpdef();
	                    this.state = 247;
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                    if(_la===grammarPythonParser.ASSIGN) {
	                        this.state = 245;
	                        this.match(grammarPythonParser.ASSIGN);
	                        this.state = 246;
	                        this.test();
	                    }
	             
	                }
	                this.state = 253;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,12,this._ctx);
	            }

	            this.state = 287;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===grammarPythonParser.COMMA) {
	                this.state = 254;
	                this.match(grammarPythonParser.COMMA);
	                this.state = 285;
	                this._errHandler.sync(this);
	                switch (this._input.LA(1)) {
	                case grammarPythonParser.STAR:
	                	this.state = 255;
	                	this.match(grammarPythonParser.STAR);
	                	this.state = 257;
	                	this._errHandler.sync(this);
	                	_la = this._input.LA(1);
	                	if(_la===grammarPythonParser.NAME) {
	                	    this.state = 256;
	                	    this.tfpdef();
	                	}

	                	this.state = 267;
	                	this._errHandler.sync(this);
	                	var _alt = this._interp.adaptivePredict(this._input,15,this._ctx)
	                	while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                	    if(_alt===1) {
	                	        this.state = 259;
	                	        this.match(grammarPythonParser.COMMA);
	                	        this.state = 260;
	                	        this.tfpdef();
	                	        this.state = 263;
	                	        this._errHandler.sync(this);
	                	        _la = this._input.LA(1);
	                	        if(_la===grammarPythonParser.ASSIGN) {
	                	            this.state = 261;
	                	            this.match(grammarPythonParser.ASSIGN);
	                	            this.state = 262;
	                	            this.test();
	                	        }
	                	 
	                	    }
	                	    this.state = 269;
	                	    this._errHandler.sync(this);
	                	    _alt = this._interp.adaptivePredict(this._input,15,this._ctx);
	                	}
